deployment/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: challenge-ns
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: challenge-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: gporras/chat-socket-broker:latest
          ports:
            - containerPort: 8080
