deployment/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 4200
    targetPort: 80
  type: NodePort
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  labels:
    app: frontend 
spec:
  containers:
  - name: frontend-container
    image: gporras/chat-socket-front:latest
    ports:
    - containerPort: 80
